# netagent-benchmark

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  TODO.md  mise.toml  pom.xml  pyproject.toml
01_originals/CHZ/: CHZ_slides_source.pptx
03_analysis/: fyp_selection_guide.md
docs/: topic.md
docs/archive/2026-06-progress-review/: README.md  progress-review-20260608.tex
experiments/netconfeval-paper/level1-2-20260626-001054/level1_translation_results/: result-deepseek-v4-flash-step1-faithful-20260625-161524.csv
experiments/netconfeval-paper/level1-2-20260626-001054/level2_function_call_results/: result-deepseek-v4-flash-adhoc-reachability-function-20260625-161545.csv
experiments/netconfeval-paper/level3-20260626-002509/paper_faithful_results/: result-deepseek-v4-flash-shortest_path-basic-without_feedback-20260625-162536.csv
experiments/netconfeval-paper/level3-20260626-002509/thinking_probe/: variant_results.csv
fyp_agent/: __init__.py  _cml_compat.py  agent.py  artifacts.py  cli.py  config.py  doctor.py  llm.py  loop.py  mcp_client.py  prompts.py  run_logging.py  runner.py  tools.py
netagent/: __init__.py  artifacts.py  cli.py  config.py  doctor.py  llm.py  loop.py  mcp_client.py  prompts.py  run_logging.py  runner.py  tools.py  trace.py
research/: __init__.py  literature-review.md
research/netconfeval_repro/: README.md
src/main/java/com/frankliu/netagent/: NetagentApplication.java
src/main/java/com/frankliu/netagent/agent/: AgentLoop.java  LoopState.java  SystemPrompts.java  ToolPolicy.java
src/main/java/com/frankliu/netagent/artifact/: ArtifactFactory.java  RunArtifact.java  RunLog.java  RunLogService.java  SecretRedactor.java
src/main/java/com/frankliu/netagent/cli/: NetagentApplication.java
src/main/java/com/frankliu/netagent/config/: NetagentSettings.java
src/main/java/com/frankliu/netagent/diagnostics/: DoctorService.java
src/main/java/com/frankliu/netagent/experiment/: ExperimentRun.java  ExperimentRunException.java  ExperimentRunner.java  NetagentSettings.java
src/main/java/com/frankliu/netagent/llm/: ChatMessage.java  LlmClient.java  LlmClientFactory.java  (+3 more)
tests/: test_config.py  test_llm.py  test_loop_e2e.py  test_mcp_client.py  test_prompts.py  test_run_logging.py  test_tools.py
tests/mocks/: mock_llm.py  mock_mcp_server.py
tools/: organize_fyp_docs.py
(+55 files in other folders)
