[project]
name = "fyp-agent"
version = "0.1.0"
description = "Agent harness for LLM-driven Cisco Modeling Labs experiments."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cml-mcp[pyats]>=0.28.0",
    "openai-agents>=0.6.0",
    "openai>=2.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "virl2-client>=2.9.1,<2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
research = [
    "deepdiff>=8.0.0",
    "sortedcontainers>=2.4.0",
]
netconfeval-langchain = [
    "langchain-community>=0.2.0",
    "langchain-openai>=1.0.0",
    "requests-toolbelt>=1.0.0",
    "tiktoken>=0.7.0",
]
netconfeval-sim = [
    "chromadb>=0.5.0",
    "kathara>=3.7.0",
    "numpy>=1.26.0",
    "pdfminer.six>=20240706",
    "scikit-learn>=1.5.0",
]

[project.scripts]
fyp-agent = "fyp_agent.cli:main"
netconfeval-step1 = "research.netconfeval_repro.runners.step1_translation:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "fyp_agent",
    "research",
    "research.netconfeval_repro",
    "research.netconfeval_repro.adapters",
    "research.netconfeval_repro.datasets",
    "research.netconfeval_repro.runners",
    "research.netconfeval_repro.scorers",
    "research.netconfeval_repro.verifiers",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
