[project]
name = "fyp-agent"
version = "0.1.0"
description = "Agent harness for LLM-driven Cisco Modeling Labs experiments."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cml-mcp[pyats]>=0.28.0",
    "mcp>=1.0.0",
    "openai>=2.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "virl2-client>=2.9.1,<2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
research = [
    "deepdiff>=8.0.0",
    "sortedcontainers>=2.4.0",
]

[project.scripts]
fyp-agent = "fyp_agent.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "fyp_agent",
    "research",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
